Se agrego resultado de busqueda

--- a/html/notificaciones.html
+++ b/html/notificaciones.html
@@ -21,7 +21,7 @@
 				<h1 class="landing-title">NOTIFICACIONES</h1>
 			</div>
 			<div class="col-2 d-flex justify-content-center">
-				<a href="#">
+				<a href="buscar.html">
 					<img class="img-fot-head-mob" src="../img/lupa_blanca.png">
 				</a>
 			</div>
