--- a/html/result-busqueda.html
+++ b/html/result-busqueda.html
@@ -14,7 +14,7 @@
 	<div class="header-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
 		<div class="row">
 			<div class="col-2 d-flex justify-content-center">
-				<a href="#">
+				<a href="buscar.html">
 					<img class="img-fot-head-mob" src="../img/volver-flecha.png" alt="">
 				</a>
 			</div>
@@ -30,7 +30,135 @@
 	</div>
 
     <div class="container-mob d-block d-sm-none d-flex justify-content-center">
-      
+			<div class="col-12 mt-2">
+				<div class="col-12 text-center">
+					<img class="img-resultado" src="../img/this_paulo.jpg" alt="">
+				</div>	
+				<div class="col-12 text-center">
+					<h4 class="c-gray">Paulo Londra</h4>
+				</div>
+				<div class="col-12 text-center">
+					<h5 class="c-white">ARTISTA</h5>
+					<h6 class="c-white mt-1">780.000 SEGUIDORES</h6>
+					<h6 class="c-white mt-1">9.000.000 DE REPRODUCCIONES</h6>
+				</div>
+				<div class="col-12 text-center d-flex align-items-center justify-content-center mt-1">
+							<a class="d-flex align-items-center" href="#">
+								<img class="ico-result-busqu" src="../img/seguidor.png" alt="">
+								<h6 class="ml-2 c-white">SEGUIR</h6>
+							</a>
+				</div>
+				<div class="col-12 text-center d-flex align-items-center justify-content-center mt-2">
+					<a class="d-flex align-items-center" href="compartir.html">
+						<img class="ico-result-busqu" src="../img/compartir.png" alt="">
+						<h6 class="ml-2 c-white">COMPARTIR</h6>
+					</a>
+				</div>
+				<div class="col-12 mt-4">
+					<div class="line">
+					</div>
+				</div>
+
+				<div class="col-12 mt-1">
+					<h5 class="c-white">LO ULTIMO DEL ARTISTA</h5>
+				</div>
+				<div class="carrousel-mob ml-3 mt-2">
+						<div class="card">
+							<img class="max-h-w-card" src="../img/fiesta.jpg">
+							<h6 class="card-title mt-1 c-white">De fiesta</h6>
+							<p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+						</div>
+						<div class="card">
+							<img class="max-h-w-card" src="../img/fiesta.jpg">
+							<h6 class="card-title mt-1 c-white">De fiesta</h6>
+							<p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+						</div>
+						<div class="card">
+							<img class="max-h-w-card" src="../img/fiesta.jpg">
+							<h6 class="card-title mt-1 c-white">De fiesta</h6>
+							<p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+						</div>
+						<div class="card">
+							<img class="max-h-w-card" src="../img/fiesta.jpg">
+							<h6 class="card-title mt-1 c-white">De fiesta</h6>
+							<p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+						</div>
+						<div class="card">
+							<img class="max-h-w-card" src="../img/fiesta.jpg">
+							<h6 class="card-title mt-1 c-white">De fiesta</h6>
+							<p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+						</div>
+				</div>  
+
+				<div class="col-12 mt-5">
+                    <h5 class="c-white">LO MAS ESCUCHADO DEL ARTISTA</h5>
+                </div>
+                <div class="carrousel-mob ml-3 mt-2">
+                    <div class="card">
+                        <img class="max-h-w-card" src="../img/fiesta.jpg">
+                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                    </div>
+                    <div class="card">
+                        <img class="max-h-w-card" src="../img/fiesta.jpg">
+                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                    </div>
+                    <div class="card">
+                        <img class="max-h-w-card" src="../img/fiesta.jpg">
+                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                    </div>
+                    <div class="card">
+                        <img class="max-h-w-card" src="../img/fiesta.jpg">
+                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                    </div>
+                    <div class="card">
+                        <img class="max-h-w-card" src="../img/fiesta.jpg">
+                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                    </div>
+			</div>  
+			
+			<div class="col-12 mt-5">
+                <h5 class="c-white">PLAYLISTS DEL ARTISTA</h5>
+            </div>
+            <div class="carrousel-mob ml-3 mt-2">
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+                <div class="card">
+                    <img class="max-h-w-card" src="../img/fiesta.jpg">
+                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
+                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+                </div>
+            </div>
+		
+			</div>
+	
+	</div>
+		
+	
+
+
 	</div>
 
 	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
