--- a/html/explorar.html
+++ b/html/explorar.html
@@ -24,7 +24,7 @@
                 <h1 class="landing-title">EXPLORAR</h1>
             </div>
             <div class="col-2 d-flex justify-content-center">
-                <a href="#">
+                <a href="buscar.html">
                     <img class="img-fot-head-mob" src="../img/lupa_blanca.png">
                 </a>
             </div>
