Se agrego confiuracion mobile

--- a/html/biblioteca.html
+++ b/html/biblioteca.html
@@ -34,7 +34,7 @@
             <div class="col-9">
                 <h5 class="ml-3 mt-1 c-white">MIS PLAYLISTS</h5>
             </div>
-            <div class="col-3 d-flex justify-content-end">
+            <!-- <div class="col-3 d-flex justify-content-end">
                 <button class="btn-filtrar mt-2 position-absolute" id="btnFiltrar"><img id="imgFiltro" src="../img/filtrar_gris.png"></button>
                 <div id="filtro" class="filtrar">
                     <div class="col-12"> <h5 class="c-white mt-2">FILTRAR</h5></div>
@@ -48,10 +48,7 @@
                         </div>
                         
                         <div class="col-4">
-                            <!-- <div class="ml-1"> -->
-                            
                                 <input class="w-year btn-drop btn-sm border-0 ml-1" type="number" placeholder="Año">
-                                <!-- </div> -->
                         </div>
 
                         <div class="col-4">
@@ -73,7 +70,7 @@
                         <button class="btn-aplicar bg-lblue b-r w-100 mt-3 btn-sm border-0">APLICAR FILTROS</button>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="carrousel-mob ml-3 mt-4">
                 <div class="card">
