Se agrego perfil-mob (seguidores - playlist pub - siguiendo)

--- a/html/seguidores.html
+++ b/html/seguidores.html
@@ -30,7 +30,62 @@
 		</div>
 	</div>
 
-	<div class="container-mob d-block d-sm-none">
+    <div class="container-mob col-12 d-block d-sm-none">
+        <div class="row text-center">
+            <div class="col-12 mt-1"> <img class="img-perfil" src="../img/chico.png" alt=""></div>
+            <div class="col-12 d-flex align-items-center justify-content-center">
+                <h4 class="c-gray">John Ragnarasson</h4>
+                <a href="editar-perfil.html">
+                    <img class="max-h-w ml-2" src="../img/editar.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="row row-perfiles-mob mt-2 mb-3">
+                <div class="col-4 text-center mt-3">
+                    <a href="perfil.html">
+                        <img class="max-ico" src="../img/corazon_gris.png" alt="">
+                        <p class="c-ico">SIGUIENDO</p>
+                    </a>
+                </div>
+                <div class="col-4 text-center mt-3">
+                    <a href="seguidores.html">
+                        <img class="max-ico" src="../img/seguidores_cel.png" alt="">
+                        <p class="c-lBlue">SEGUIDORES</p>
+                    </a>
+                </div>
+                <div class="col-4 text-center mt-3">
+                    <a href="lista-reproduccion.html">
+                        <img class="max-ico" src="../img/lista-de-reproduccion_gris.png" alt="">
+                        <p class="c-ico">PLAYLIST PUBL.</p>
+                    </a>
+                </div>
+                <div class="col-12 mt-2">
+                    <div class="line"></div>
+                </div>
+                <div class="col-12 mt-3">
+                    <h5 class="c-white">Seguidores (4)</h5>
+                </div>
+                <div class="col-12 d-flex align-items-center mt-2">
+                    <div class="col-6 text-center">
+                        <img class="border-img" src="../img/chica.png" alt="" width="80%">
+                        <p class="c-white text-center">Soledad</p>
+                    </div>
+                    <div class="col-6 text-center">
+                        <img  class="border-img" src="../img/chico.png" width="80%">
+                        <p class="c-white text-center">Fito</p>
+                    </div>
+                </div>
+                <div class="col-12 d-flex align-items-center mt-2">
+                    <div class="col-6 text-center">
+                        <img class="border-img" src="../img/chica_1.png" alt="" width="80%">
+                        <p class="c-white text-center">Lucia</p>
+                    </div>
+                    <div class="col-6 text-center">
+                        <img class="border-img" src="../img/chico_1.png" width="80%">
+                        <p class="c-white text-center">Cristian</p>
+                    </div>
+                </div>
+        </div>
 	</div>
 
 	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
