--- a/html/lista-reproduccion.html
+++ b/html/lista-reproduccion.html
@@ -32,7 +32,52 @@
 		</div>
 	</div>
 
-	<div class="container-mob d-block d-sm-none">
+	<div class="container-mob col-12 d-block d-sm-none">
+        <div class="row text-center">
+            <div class="col-12 mt-1"> <img class="img-perfil" src="../img/chico.png" alt=""></div>
+            <div class="col-12 d-flex align-items-center justify-content-center">
+                <h4 class="c-gray">John Ragnarasson</h4>
+                <a href="editar-perfil.html">
+                    <img class="max-h-w ml-2" src="../img/editar.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="row row-perfiles-mob mt-2 mb-3">
+                <div class="col-4 text-center mt-3">
+                    <a href="perfil.html">
+                        <img class="max-ico" src="../img/corazon_gris.png" alt="">
+                        <p class="c-ico">SIGUIENDO</p>
+                    </a>
+                </div>
+                <div class="col-4 text-center mt-3">
+                    <a href="seguidores.html">
+                        <img class="max-ico" src="../img/seguidores.png" alt="">
+                        <p class="c-ico">SEGUIDORES</p>
+                    </a>
+                </div>
+                <div class="col-4 text-center mt-3">
+                    <a href="lista-reproduccion.html">
+                        <img class="max-ico" src="../img/lista-de-reproduccion_cel.png" alt="">
+                        <p class="c-lBlue">PLAYLIST PUBL.</p>
+                    </a>
+                </div>
+                <div class="col-12 mt-2">
+                    <div class="line"></div>
+                </div>
+                <div class="col-12 mt-3">
+                    <h5 class="c-white">Playlist publicadas (2)</h5>
+                </div>
+                <div class="col-12 d-flex align-items-center mt-2">
+                    <div class="col-6">
+                        <img class="border-img" src="../img/fiesta.jpg" alt="" width="100%">
+                        <p class="c-white text-center">Con amigos <br></br> </p>
+                    </div>
+                    <div class="col-6">
+                        <img class="border-img" src="../img/ìconos-del-Rock-Argentino.jpg" width="100%">
+                        <p class="c-white text-center">Lo mejor del rock</p>
+                    </div>
+                </div>
+        </div>
 	</div>
 
 	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
