--- a/html/biblioteca.html
+++ b/html/biblioteca.html
@@ -34,9 +34,9 @@
             <div class="col-9">
                 <h5 class="ml-3 mt-1 c-white">MIS PLAYLISTS</h5>
             </div>
-            <!-- <div class="col-3 d-flex justify-content-end">
-                <button class="btn-filtrar mt-2 position-absolute" id="btnFiltrar"><img id="imgFiltro" src="../img/filtrar_gris.png"></button>
-                <div id="filtro" class="filtrar">
+            <div class="col-3 d-flex justify-content-end">
+                <button class="btn-filtrar mt-2 position-absolute" id="btnFiltrarMob"><img id="imgFiltroMob" src="../img/filtrar_gris.png"></button>
+                <div id="filtroMob" class="filtrar mr-5">
                     <div class="col-12"> <h5 class="c-white mt-2">FILTRAR</h5></div>
                     <div class="col-12"> <p class="mb-0 c-white text-left">POR FECHA</p></div>
                     <div class="row mt-1 pl-2 pr-4 d-flex justify-content-around">
@@ -70,7 +70,7 @@
                         <button class="btn-aplicar bg-lblue b-r w-100 mt-3 btn-sm border-0">APLICAR FILTROS</button>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </div>
         <div class="carrousel-mob ml-3 mt-4">
                 <div class="card">
