Se agregaron mejoras, todas las imagenes cuadradas, botones en celeste y se cambio el ico + a blanco

--- a/html/home.html
+++ b/html/home.html
@@ -128,7 +128,7 @@
             </div>  
 
         <div class="col-12 d-flex justify-content-center">
-            <button class="btn-add-image" id="masRecomendacionesMob"><img id="imgMasMob" src="../img/anadir.png"></button>
+            <button class="btn-add-image mt-3 mb-3" id="masRecomendacionesMob"><img id="imgMasMob" src="../img/anadir.png"></button>
         </div>
         <div class="ocultar" id="divMostrarMob">
             <div class="col-12 mt-5">
@@ -640,7 +640,7 @@
 
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
-                        <button class="btn-add-image" id="masRecomendaciones"><img id="imgMas" src="../img/anadir.png"></button>
+                        <button class="btn-add-image mt-3 mb-3" id="masRecomendaciones"><img id="imgMas" src="../img/anadir.png"></button>
                     </div>
                 </div>
 
