--- a/html/configuracion.html
+++ b/html/configuracion.html
@@ -90,7 +90,7 @@
 				<div class="col-12 mt-4">
 					<h4 class="c-gray">CAMBIAR DE PLAN</h4>
 					<h5 class="c-white">Plan</h5>
-					<h4 class="c-green title-opciones">FAMILIAR</h4>
+					<h4 class="c-lBlue title-opciones">FAMILIAR</h4>
 					<a href="planes.html"><button class="btn-plan-mob mt-1">CAMBIAR DE PLAN</button></a>
 				</div>
 				<div class="col-12 mt-5">
@@ -282,7 +282,7 @@
 			<div class="row">
 				<div class="col-6 ajustar-content">
 					<h5 class="c-white title-opciones">Plan:</h5>
-					<h4 class="c-green title-opciones">FAMILIAR</h4>
+					<h4 class="c-lBlue title-opciones">FAMILIAR</h4>
 					<a href="planes.html"><button class="btn-plan mt-1">CAMBIAR DE PLAN</button></a>
 				</div>
 			</div>
