se finalizo resultado de busqueda

--- a/html/editar-perfil.html
+++ b/html/editar-perfil.html
@@ -32,7 +32,40 @@
 		</div>
 	</div>
 
-	<div class="container-mob d-block d-sm-none">
+	<div class="container-mob col-12 d-block d-sm-none">
+        <div class="row">
+            <div class="col-12 text-center mt-2">
+                <img class="img-perfil" src="../img/chico.png" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 text-center">
+                <h4 class="c-gray">John Ragnarasson</h4>
+            </div>
+        </div>
+        <div class="row row-edit-perfil mt-3">
+            <div class="col-12 text-center">
+                <h4 class="c-white mt-1">EDITAR PERFIL</h4>
+            </div>
+            <div class="col-12 mt-1">
+                <div class="line">
+                    
+                </div>
+            </div>
+            <div class="col-12 mt-3">
+                <h5 class="c-white">Nombre de usuario nuevo</h5>
+                <input class="form-input" type="text" placeholder="Debe iniciar con mayuscula">
+            </div>
+            <div class="col-12 mt-3">
+                <h5 class="c-white">Repetir nombre</h5>
+                <input class="form-input" type="text">
+            </div>
+            <div class="col-12 mt-3 text-center mb-3">
+                <a href="perfil.html">
+                    <button class="btn btn-cambios-mob">APLICAR CAMBIOS</button>
+                </a>
+            </div>
+        </div>
 	</div>
 
 	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
