--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -62,9 +62,11 @@
                                 </label>
                             </div>
                             <div  class="input-container col-sm-8 offset-md-2" >
-                                <button type="button" class="btn access-button">
-                                    INICIAR SESIÓN
-                                </button>
+                                <a href="home.html">
+                                    <button type="button" class="btn access-button">
+                                        INICIAR SESIÓN
+                                    </button>
+                                </a>
                             </div>
                             <div class="d-none d-sm-flex col-sm-4 offset-md-4 mt-3">
                                 <a href="../index.html">
