--- a/html/explorar.html
+++ b/html/explorar.html
@@ -317,50 +317,46 @@
 
             <!-- INICIO DE CARDS -->
             <div class="col-10">
-                <div class="row">
                     <h3 class="ml-3 c-white">EXPLORAR</h3>
-                </div>
 
                 <!-- MUSICA SEGUN TU LUGAR -->
-                <div class="row">
-                    <h5 class="ml-3 c-white">MÚSICA SEGÚN TU LUGAR</h5>
-                </div>
-                <div class="row">
+                    <h5 class="ml-3 mt-3 c-white">MÚSICA SEGÚN TU LUGAR</h5>
+                <div class="row mt-2 ml-3">
                     <!-- LO ULTIMO -->
                   
                     <!--  CARRUSEL 1-->
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/maleta.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">TRABAJO</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/casaGrande.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">CASA</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/gimnasio.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">GIMNASIO</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/luna.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">DORMIR</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/avion.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">VIAJE</h5>
@@ -372,44 +368,42 @@
                 <!-- FIN DE MUSICA SEGUN TU LUGAR -->
 
                 <!-- TITULO CATEGORIA -->
-                <div class="row mt-4">
-                    <h5 class="ml-3 c-white">CATEGORIAS</h5>
-                </div>
+                    <h5 class="ml-3 mt-5 c-white">CATEGORIAS</h5>
                 <!-- FIN TITULO CATEGORIA -->
 
-                <div class="row">
+                <div class="row mt-2 ml-3">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/guitarra-electrica.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">ROCK</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/ballet.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">DANZA</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/guitarra.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">LATINO</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/musica.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">HIP HOP</h5>
@@ -419,39 +413,39 @@
 
                 </div>
 
-                <div class="row">
+                <div class="row ml-3">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/guitarra-electrica.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">ROCK</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/ballet.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">DANZA</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/guitarra.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">LATINO</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/musica.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">HIP HOP</h5>
@@ -461,39 +455,39 @@
 
                 </div>
 
-                <div class="row">
+                <div class="row ml-3">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/guitarra-electrica.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">ROCK</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/ballet.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">DANZA</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/guitarra.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">LATINO</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/musica.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">HIP HOP</h5>
@@ -503,39 +497,39 @@
 
                 </div>
 
-                <div class="row">
+                <div class="row ml-3">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/guitarra-electrica.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">ROCK</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/ballet.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">DANZA</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/guitarra.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">LATINO</h5>
                             </div>
 
                             <div class="card col-2">
-                                <div class="img-fondo">
+                                <div class="img-fondo efecto-hover">
                                     <img class="mt-3" src="../img/musica.png" width="40%" height="65%">
                                 </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">HIP HOP</h5>
@@ -545,6 +539,47 @@
 
                 </div>
 
+                <div class="row ml-3">
+                    <div class="carousel-item active" data-interval="20000">
+                        <div class="row card-deck mt-1">
+                            <div class="card col-2">
+                                <div class="img-fondo efecto-hover">
+                                    <img class="mt-3" src="../img/guitarra-electrica.png" width="40%" height="70%">
+                                </div>
+                                <h5 class="card-title mt-1 ml-4 c-white text-center">ROCK</h5>
+                            </div>
+
+                            <div class="card col-2">
+                                <div class="img-fondo efecto-hover">
+                                    <img class="mt-3" src="../img/ballet.png" width="40%" height="65%">
+                                </div>
+                                <h5 class="card-title mt-1 ml-4 c-white text-center">DANZA</h5>
+                            </div>
+
+                            <div class="card col-2">
+                                <div class="img-fondo efecto-hover">
+                                    <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
+                                </div>
+                                <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
+                            </div>
+
+                            <div class="card col-2">
+                                <div class="img-fondo efecto-hover">
+                                    <img class="mt-3" src="../img/guitarra.png" width="40%" height="65%">
+                                </div>
+                                <h5 class="card-title mt-1 ml-4 c-white text-center">LATINO</h5>
+                            </div>
+
+                            <div class="card col-2">
+                                <div class="img-fondo efecto-hover">
+                                    <img class="mt-3" src="../img/musica.png" width="40%" height="65%">
+                                </div>
+                                <h5 class="card-title mt-1 ml-4 c-white text-center">HIP HOP</h5>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
 
             </div>
         </div> <!-- FIN DE CARDS -->
