--- a/html/home.html
+++ b/html/home.html
@@ -296,13 +296,14 @@
             <!-- CARROUSELES -->
             <div class="col-10">
                 <!-- CARROUSEL 1 (Lo ultimo) -->
-                <div class="row">
                 <h3 class="ml-3 c-white">HOME</h3>
+
+                <div class="row">
                                                     <!-- LO ULTIMO --> 
                 <div id="carouselExampleInterval" class="carousel slide ml-3 mt-3" data-ride="carousel">
                     <div class="row mr-6">
                         <div class="col-9">
-                            <h5 class="c-white">LO ULTIMO</h5>
+                            <h5 class="ml-3 c-white">LO ULTIMO</h5>
                         </div>
                         <div class="col-3 d-flex justify-content-end">
                             <a href="#carouselExampleInterval" role="button" data-slide="prev">
@@ -416,7 +417,7 @@
                     <div id="carouselExampleIntervalTwo" class="carousel slide ml-3" data-ride="carousel">
                     <div class="row mr-6">
                         <div class="col-9">
-                            <h5 class="c-white">ESCUCHADOS RECIENTEMENTES</h5>
+                            <h5 class="ml-3 c-white">ESCUCHADOS RECIENTEMENTES</h5>
                         </div>
                         <div class="col-3 d-flex justify-content-end">
                             <a href="#carouselExampleIntervalTwo" role="button" data-slide="prev">
@@ -530,7 +531,7 @@
                     <div id="carouselExampleIntervalThree" class="carousel slide tCenter ml-3" data-ride="carousel">
                     <div class="row mr-6">
                         <div class="col-9">
-                            <h5 class="c-white">LO QUE MAS TE GUSTA</h5>
+                            <h5 class="ml-3 c-white">LO QUE MAS TE GUSTA</h5>
                         </div>
                         <div class="col-3 d-flex justify-content-end">
                             <a href="#carouselExampleIntervalThree" role="button" data-slide="prev">
@@ -651,7 +652,7 @@
                     <div id="carouselExampleIntervalFour" class="carousel slide ml-3" data-ride="carousel">
                     <div class="row mr-6">
                         <div class="col-9">
-                            <h5 class="c-white">LO QUE MAS TE GUSTA</h5>
+                            <h5 class="ml-3 c-white">LO QUE MAS TE GUSTA</h5>
                         </div>
                         <div class="col-3 d-flex justify-content-end">
                             <a href="#carouselExampleIntervalFour" role="button" data-slide="prev">
@@ -763,7 +764,7 @@
                     <div id="carouselExampleIntervalFive" class="carousel slide ml-3" data-ride="carousel">
                     <div class="row mr-6">
                         <div class="col-9">
-                            <h5 class="c-white">LO QUE MAS TE GUSTA</h5>
+                            <h5 class="ml-3 c-white">LO QUE MAS TE GUSTA</h5>
                         </div>
                         <div class="col-3 d-flex justify-content-end">
                             <a href="#carouselExampleIntervalFive" role="button" data-slide="prev">
