--- a/html/home.html
+++ b/html/home.html
@@ -885,7 +885,9 @@
             <div class="col-3 pl-0">
                 <div class="row">
                     <div class="col-6">
-                    <img  src="../img/imgAlbum.jpg" alt="album" width="100%" height="118px">
+                    <a href="reproductor.html">
+                        <img  src="../img/imgAlbum.jpg" alt="album" width="100%" height="118px">
+                    </a>
                     </div>
                     <div class="col-6">
                         <div class="row">
