Se agrego pop-up de add playlist

--- a/html/reproductor.html
+++ b/html/reproductor.html
@@ -287,9 +287,20 @@
                                 <h3 class="c-white">Tal vez</h3>
                             </div>
                             <div class="col-2">
-                                <a href="#">
+                                <div class="btn-group">
+                                    <button class="btn btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <img class="add-list" src="../img/agregar_a_lista.png" alt="">
-                                </a>
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <h6 class="c-white border-b">AGREGAR A:</h6>
+                                        <ul class="pl-4">
+                                            <li class="border-b">En el gym <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a> </li>
+                                            <li class="border-b">Lentos <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                            <li class="border-b">Meditación <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                            <li class="border-b">Fiesta<a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                        </ul>
+                                    </div>
+                                  </div>   
                             </div>
                         </div>
                         <div class="col-2 d-flex text-center justify-content-center ">
@@ -307,9 +318,20 @@
                                 <h3 class="c-white">Nena maldición</h3>
                             </div>
                             <div class="col-2">
-                                <a href="#">
+                                <div class="btn-group">
+                                    <button class="btn btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <img class="add-list" src="../img/agregar_a_lista.png" alt="">
-                                </a>
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <h6 class="c-white border-b">AGREGAR A:</h6>
+                                        <ul class="pl-4">
+                                            <li class="border-b">En el gym <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a> </li>
+                                            <li class="border-b">Lentos <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                            <li class="border-b">Meditación <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                            <li class="border-b">Fiesta<a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                        </ul>
+                                    </div>
+                                  </div>
                             </div>
                         </div>
                         <div class="col-2 d-flex text-center justify-content-center ">
@@ -327,9 +349,20 @@
                                 <h3 class="c-white">Adán y Eva</h3>
                             </div>
                             <div class="col-2">
-                                <a href="#">
+                                <div class="btn-group">
+                                    <button class="btn btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <img class="add-list" src="../img/agregar_a_lista.png" alt="">
-                                </a>
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <h6 class="c-white border-b">AGREGAR A:</h6>
+                                        <ul class="pl-4">
+                                            <li class="border-b">En el gym <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a> </li>
+                                            <li class="border-b">Lentos <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                            <li class="border-b">Meditación <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                            <li class="border-b">Fiesta<a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                        </ul>
+                                    </div>
+                                  </div>
                             </div>
                         </div>
                         <div class="col-2 d-flex text-center justify-content-center ">
@@ -347,9 +380,20 @@
                                 <h3 class="c-white">Solo pienso en ti</h3>
                             </div>
                             <div class="col-2">
-                                <a href="#">
+                                <div class="btn-group">
+                                    <button class="btn btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <img class="add-list" src="../img/agregar_a_lista.png" alt="">
-                                </a>
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <h6 class="c-white border-b">AGREGAR A:</h6>
+                                        <ul class="pl-4">
+                                            <li class="border-b">En el gym <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a> </li>
+                                            <li class="border-b">Lentos <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                            <li class="border-b">Meditación <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                            <li class="border-b">Fiesta<a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                        </ul>
+                                    </div>
+                                  </div>
                             </div>
                         </div>
                         <div class="col-2 d-flex text-center justify-content-center ">
@@ -367,9 +411,20 @@
                                 <h3 class="c-white">No puedo</h3>
                             </div>
                             <div class="col-2">
-                                <a href="#">
+                                <div class="btn-group">
+                                    <button class="btn btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <img class="add-list" src="../img/agregar_a_lista.png" alt="">
-                                </a>
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <h6 class="c-white border-b">AGREGAR A:</h6>
+                                        <ul class="pl-4">
+                                            <li class="border-b">En el gym <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a> </li>
+                                            <li class="border-b">Lentos <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                            <li class="border-b">Meditación <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                            <li class="border-b">Fiesta<a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                        </ul>
+                                    </div>
+                                  </div>
                             </div>
                         </div>
                         <div class="col-2 d-flex text-center justify-content-center ">
@@ -387,9 +442,20 @@
                                 <h3 class="c-white">Tal vez</h3>
                             </div>
                             <div class="col-2">
-                                <a href="#">
+                                <div class="btn-group">
+                                    <button class="btn btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <img class="add-list" src="../img/agregar_a_lista.png" alt="">
-                                </a>
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <h6 class="c-white border-b">AGREGAR A:</h6>
+                                        <ul class="pl-4">
+                                            <li class="border-b">En el gym <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a> </li>
+                                            <li class="border-b">Lentos <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                            <li class="border-b">Meditación <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                            <li class="border-b">Fiesta<a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                                        </ul>
+                                    </div>
+                                  </div>
                             </div>
                         </div>
                         <div class="col-2 d-flex text-center justify-content-center ">
@@ -406,63 +472,66 @@
         </div>
 
         <!-- FOOTER -->
-    <div class="footerDesk col-md-12 d-none d-sm-block">
-        <div class="row">
-            <div class="col-3 pl-0">
-                <div class="row">
-                    <div class="col-6">
-                    <img  src="../img/imgAlbum.jpg" alt="album" width="100%" height="118px">
-                    </div>
-                    <div class="col-6">
-                        <div class="row">
-                            <h6 class="c-white ml-1 mt-1">Tal vez</h6>
-                            <img class="ml-3 mt-2" src="../img/corazon_blanco.png" alt="like" width="12%" height="10%">
+        <div class="footerDesk col-md-12 d-none d-sm-block">
+            <div class="row">
+                <div class="col-3 pl-0">
+                    <div class="row">
+                        <div class="col-6">
+                        <a href="reproductor.html">
+                            <img  src="../img/imgAlbum.jpg" alt="album" width="100%" height="118px">
+                        </a>
                         </div>
-                        <div class="row">
-                            <p class="ml-1 mt-5 mb-0 c-white">Paulo londra</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="row">
-                    <div class="col-12 text-center mt-3">
-                        <img src="../img/back.png" alt="anterior"  width="3%" height="55%">
-                        <img class="mr-3 ml-3" src="../img/play.png" alt="play" width="6%" height="100%">
-                        <img src="../img/proximo.png" alt="next"  width="3%" height="55%">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 d-flex justify-content-end">
-                        <img src="../img/sonido-musical.png" alt="sonido" height="22px">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="reproductor col-12 pl-0 mt-1">
-                        <div class="load col-8">
+                        <div class="col-6">
+                            <div class="row">
+                                <h6 class="c-white ml-1 mt-1">Tal vez</h6>
+                                <button class="btn-like ml-3 mt-1" id="btnLike">
+                                    <img id="imgCorazon" src="../img/corazon_blanco.png" alt="like">
+                                </button>
+                            </div>
+                            <div class="row">
+                                <p class="ml-1 mt-5 mb-0 c-white">Paulo londra</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-3">
-                <div class="row d-flex justify-content-end">
-                    <img class="mr-3 mt-4" src="../img/comentario.png" alt="comentario" width="8%" height="90%">
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-12 text-center d-flex align-items-center justify-content-center mt-2">
+                            <img class="img-next-back" src="../img/back.png" alt="anterior"  width="2%" height="40%">
+                            <img class="mr-4 ml-4 img-play" src="../img/play.png" width="8%" height="100%">
+                            <img class="img-next-back" src="../img/proximo.png" alt="next"  width="2%" height="40%">
+    
+                        </div>
+                    </div>
+                        <div class="col-12 d-flex justify-content-end">
+                            <img src="../img/sonido-musical.png" alt="sonido" height="22px">
+                        </div>
+                    <div class="row">
+                        <div class="reproductor col-12 pl-0 mt-1">
+                            <div class="w-100 h-100 bg-white col-8">
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-12 mt-4 d-flex justify-content-end">
-                        <img src="../img/estrella.png" alt="star" width="8%" height="80%">
-                        <img class="ml-2" src="../img/estrella.png" alt="star" width="8%" height="80%">
-                        <img class="ml-2" src="../img/estrella.png" alt="star" width="8%" height="80%">
-                        <img class="ml-2" src="../img/estrella_va.png" alt="star" width="8%" height="80%">
-                        <img class="mr-2 ml-2" src="../img/estrella_va.png" alt="star" width="8%" height="80%">
+                <div class="col-md-3">
+                    <div class="row d-flex justify-content-end">
+                        <img class="mr-3 mt-4" src="../img/comentario.png" alt="comentario" width="8%" height="90%">
+                    </div>
+                    <div class="row">
+                        <div class="col-12 mt-4 d-flex justify-content-end">
+                            <img src="../img/estrella.png" alt="star" width="8%" height="80%">
+                            <img class="ml-2" src="../img/estrella.png" alt="star" width="8%" height="80%">
+                            <img class="ml-2" src="../img/estrella.png" alt="star" width="8%" height="80%">
+                            <img class="ml-2" src="../img/estrella_va.png" alt="star" width="8%" height="80%">
+                            <img class="mr-2 ml-2" src="../img/estrella_va.png" alt="star" width="8%" height="80%">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 <!-- FIN OCULTO SOLO EN XS     desktop -->
 
-
+<script src="../js/reproductor.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
