--- a/html/home.html
+++ b/html/home.html
@@ -892,7 +892,9 @@
                     <div class="col-6">
                         <div class="row">
                             <h6 class="c-white ml-1 mt-1">Tal vez</h6>
-                            <img class="ml-3 mt-2" src="../img/corazon_blanco.png" alt="like" width="12%" height="10%">
+                            <button class="btn-like ml-3 mt-1" id="btnLike">
+                                <img id="imgCorazon" src="../img/corazon_blanco.png" alt="like">
+                            </button>
                         </div>
                         <div class="row">
                             <p class="ml-1 mt-5 mb-0 c-white">Paulo londra</p>
@@ -902,20 +904,19 @@
             </div>
             <div class="col-6">
                 <div class="row">
-                    <div class="col-12 text-center mt-3">
-                        <img src="../img/back.png" alt="anterior"  width="3%" height="55%">
-                        <img class="mr-3 ml-3" src="../img/play.png" alt="play" width="6%" height="100%">
-                        <img src="../img/proximo.png" alt="next"  width="3%" height="55%">
+                    <div class="col-12 text-center d-flex align-items-center justify-content-center mt-2">
+                        <img class="img-next-back" src="../img/back.png" alt="anterior"  width="2%" height="40%">
+                        <img class="mr-4 ml-4 img-play" src="../img/play.png" width="8%" height="100%">
+                        <img class="img-next-back" src="../img/proximo.png" alt="next"  width="2%" height="40%">
+
                     </div>
                 </div>
-                <div class="row">
                     <div class="col-12 d-flex justify-content-end">
                         <img src="../img/sonido-musical.png" alt="sonido" height="22px">
                     </div>
-                </div>
                 <div class="row">
                     <div class="reproductor col-12 pl-0 mt-1">
-                        <div class="load col-8">
+                        <div class="w-100 h-100 bg-white col-8">
                         </div>
                     </div>
                 </div>
