--- a/html/home.html
+++ b/html/home.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/vote.css">
     <title>Spoiler five</title>
 </head>
 <body>
@@ -776,8 +777,8 @@
                             </a>
                         </div>
                     </div>
-                
-                    <div class="carousel-inner">     <!--  CARRUSEL 1--> 
+                    <!--  CARRUSEL 1--> 
+                    <div class="carousel-inner">   
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-3">
@@ -785,7 +786,6 @@
                                     <h5 class="card-title mt-1 c-white">Fiesta! Fiesta!</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>
-
                             <div class="card col-3">
                                 <img src="../img/ìconos-del-Rock-Argentino.jpg" width="80%" height="45%">
                                     <h5 class="card-title mt-1 c-white">Rock Argentino</h5>
@@ -871,8 +871,6 @@
                 </div>
                  <!--        fin carrouseles ocultos        -->
                 </div>
-
-        
             </div>
             </div> <!-- FIN DE CARROUSELES -->
         </div>
@@ -918,26 +916,46 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="row d-flex justify-content-end">
-                    <img class="mr-3 mt-4" src="../img/comentario.png" alt="comentario" width="8%" height="90%">
-                </div>
-                <div class="row">
-                    <div class="col-12 mt-4 d-flex justify-content-end">
-                        <img src="../img/estrella.png" alt="star" width="8%" height="80%">
-                        <img class="ml-2" src="../img/estrella.png" alt="star" width="8%" height="80%">
-                        <img class="ml-2" src="../img/estrella.png" alt="star" width="8%" height="80%">
-                        <img class="ml-2" src="../img/estrella_va.png" alt="star" width="8%" height="80%">
-                        <img class="mr-2 ml-2" src="../img/estrella_va.png" alt="star" width="8%" height="80%">
+                <div class="row h-100">
+                    <div class="col-sm-12 mt-4 mb-3 vote-container">
+                        <div class="vote-text">
+                            Califica este audio
+                        </div>
+                        <div class="star-container">
+                            <img  src="../img/estrella_va.png" class="star" alt="star">
+                            <img  src="../img/estrella_va.png" class="ml-2 star" alt="star">
+                            <img  src="../img/estrella_va.png" class="ml-2 star" alt="star">
+                            <img  src="../img/estrella_va.png" class="ml-2 star"  alt="star">
+                            <img  src="../img/estrella_va.png" class="mr-2 ml-2 star" alt="star">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <section >
+		<div class="comments-container hide">
+			<div class="comment-header-container">
+				<div class="comment-image-container">
+					<img src="../img/comentario.png" width="60%" height="90%" alt="">
+				</div>
+				<div class="comment-title-container">
+					<span class="comment-title">Deja tu comentario sobre el audio</span>
+				</div>
+			</div>
+			<div class="comment-main-container">
+				<textarea name="" class="comment-area" cols="40" rows="10" placeholder="Ingrese su comentario aquí"></textarea>
+			</div>
+			<div class="comments-footer-container ">
+                <button type="button" id="vote" class="btn access-button">
+                    VOTAR
+                </button>
+			</div>
+		</div>
+	</section>
 <!-- FIN OCULTO SOLO EN XS     desktop -->
-
-
-
     <script src="../js/home.js"></script>
+    <script src="../js/voting.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
