Se agrego pop-up de notificaciones

--- a/html/ayuda.html
+++ b/html/ayuda.html
@@ -31,7 +31,7 @@
         <div class="container-fluid landing-header d-none d-sm-block">
             <div class="row full-height">
                 <div class="d-none col-sm-4 d-sm-flex align-items-center">
-                    <a href="../index.html">
+                    <a href="home.html">
                         <img src="../img/spoilerfive-logo.png" alt="spoiler-five" width="70%" height="20%">
                     </a>
                 </div>
