--- a/html/home.html
+++ b/html/home.html
@@ -251,9 +251,33 @@
                         <span class="span-user d-flex flex-column mr-1">John86</span>
                 </div>
                 <div>
-                        <a href="notificaciones.html">
-                            <img src="../img/campana.png" width="50%" height="20%">
-                        </a>
+                            <button class="btn btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img class="add-list" src="../img/campana.png" width="100%" height="100%">
+                            </button>
+                            <div class="dropdown-menu">
+                                <h4 class="c-white border-b text-center">NOTIFICACIONES</h4>
+                                    <div class="border-b d-flex align-items-center">
+                                        <img class="max-h-w ml-2" src="../img/usuario.png" alt="">
+                                        <p class="ml-4"> Haz tu cuenta premium y <br> disfruta tu musica sin limites </p>
+                                        <img class="left-playlist max-h-w" src="../img/premium.png" alt=""> 
+                                    </div>
+                                    <div class="border-b d-flex align-items-center">
+                                        <img class="max-h-w ml-1" src="../img/nota-musical.png" alt="">
+                                        <p class="ml-4"> Tu artista favorito ha sacado <br> un nuevo tema </p>
+                                        <img class="left-playlist max-h-w" src="../img/play.png" alt=""> 
+                                    </div>
+                                    <div class="border-b d-flex align-items-center">
+                                        <img class="max-h-w ml-1" src="../img/nota-musical.png" alt="">
+                                        <p class="ml-4"> Mira, tal vez esta playlist <br> te interese</p>
+                                        <img class="left-playlist max-h-w" src="../img/play.png" alt=""> 
+                                    </div>
+                                    <div class="border-b d-flex align-items-center">
+                                        <img class="max-h-w ml-2" src="../img/usuario.png" alt="">
+                                        <p class="ml-4">Accedieron a tu cuenta desde  <br> un dispositivo distinto, eres tú?</p>
+                                        <img class="left-playlist max-h-w" src="../img/ajustes.png" alt=""> 
+                                    </div>
+
+                            </div>
                 </div>
                 <div>
                         <a href="configuracion.html">
