--- a/html/seguidores.html
+++ b/html/seguidores.html
@@ -118,30 +118,54 @@
 	</div>
 	<!-- MOBILE --> 
     <!-- OCULTO SOLO EN XS     desktop -->
-        <div class="headerDesk col-12 d-none d-sm-block">
+    <div class="headerDesk col-12 d-none d-sm-block">
         <div class="row h-100">
-            <div class="col-2 d-sm-flex align-items-center">
+           <div class="col-2 d-sm-flex align-items-center">
                 <a href="home.html">
                     <img src="../img/spoilerfive-logo.png" alt="spoiler-five" width="70%" height="20%">
                 </a>
             </div>
-            <div class="col-6 d-sm-flex align-items-center">
+           <div class="col-6 d-sm-flex align-items-center">
                 <img class="ajustarLupa" src="../img/lupa.png" alt="search" width="5%" height="38%">  
                 <input class="searchDesk" placeholder="Artistas, Canciones, Podcasts" type="text">   
-            </div>
-            <div class="col-4 text-center d-sm-flex align-items-center justify-content-end pl-2"> 
+           </div>
+           <div class="col-4 text-center d-sm-flex align-items-center justify-content-end pl-2"> 
                 <div>
-                    <div class="col-12 d-flex align-items-center mt-2 mr-1">
-                        <a href="perfil.html">
-                            <img class="max-h-w" src="../img/usuario.png" width="100%" height="100%">
-                        </a>
-                    </div>  
-                    <span class="span-user d-flex flex-column mr-1">John86</span>
+                        <div class="col-12 d-flex align-items-center mt-2 mr-1">
+                            <a href="perfil.html">
+                                <img class="max-h-w" src="../img/usuario.png" width="100%" height="100%">
+                            </a>
+                        </div>  
+                        <span class="span-user d-flex flex-column mr-1">John86</span>
                 </div>
                 <div>
-                        <a href="notificaciones.html">
-                            <img src="../img/campana.png" width="50%" height="20%">
-                        </a>
+                            <button class="btn btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img class="add-list" src="../img/campana.png" width="100%" height="100%">
+                            </button>
+                            <div class="dropdown-menu">
+                                <h4 class="c-white border-b text-center">NOTIFICACIONES</h4>
+                                    <div class="border-b d-flex align-items-center">
+                                        <img class="max-h-w ml-2" src="../img/usuario.png" alt="">
+                                        <p class="ml-4"> Haz tu cuenta premium y <br> disfruta tu musica sin limites </p>
+                                        <img class="left-playlist max-h-w" src="../img/premium.png" alt=""> 
+                                    </div>
+                                    <div class="border-b d-flex align-items-center">
+                                        <img class="max-h-w ml-1" src="../img/nota-musical.png" alt="">
+                                        <p class="ml-4"> Tu artista favorito ha sacado <br> un nuevo tema </p>
+                                        <img class="left-playlist max-h-w" src="../img/play.png" alt=""> 
+                                    </div>
+                                    <div class="border-b d-flex align-items-center">
+                                        <img class="max-h-w ml-1" src="../img/nota-musical.png" alt="">
+                                        <p class="ml-4"> Mira, tal vez esta playlist <br> te interese</p>
+                                        <img class="left-playlist max-h-w" src="../img/play.png" alt=""> 
+                                    </div>
+                                    <div class="border-b d-flex align-items-center">
+                                        <img class="max-h-w ml-2" src="../img/usuario.png" alt="">
+                                        <p class="ml-4">Accedieron a tu cuenta desde  <br> un dispositivo distinto, eres tú?</p>
+                                        <img class="left-playlist max-h-w" src="../img/ajustes.png" alt=""> 
+                                    </div>
+
+                            </div>
                 </div>
                 <div>
                         <a href="configuracion.html">
@@ -149,9 +173,8 @@
                         </a>
                 </div>
             </div>
-            <!-- <div class="icoDesk col-2"></div> -->
         </div>
-        </div>
+    </div>
 
         <div class="container-desk col-12 d-none d-sm-block">
             <div class="row">
